# coreutils

./: CMakeLists.txt
src/coreutils/: fifo.h  file.h  file.test.cpp  format.h  log.cpp  path.h  resources.h  resources.test.cpp  url.h  utf8.h  utils.h
